kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eap-frontend
spec:
  selector:
    app: eap-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
